[package]
name = "printc"
version = "0.1.1"
edition = "2021"
authors = ["Amir <amab8901@protonmail.com>"]
description = "Print-clean macro. Like `println!` but cleaner input."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
